--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,13 @@
 body {
   margin: 0;
-  font-family: 'Inter', system-ui;
+  
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
+}
+
+* {
+  font-family: 'Inter',   system-ui;
 }
 
 .App {
@@ -40,6 +44,18 @@ header {
   width: 220px;
   border-radius: 40px;
   margin-right: 30px;
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+ 
+
+  &:hover {
+      box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
+      transform: translateY(-5px);
+  }
+  
+  .favorite {
+    position: absolute;
+    cursor: pointer;
+  }
 
   span {
     font-size: 13px;
@@ -66,4 +82,155 @@ header {
   height: 32px;
   width: 32px;
   cursor: pointer;
+}
+
+.search-block {
+  border: 1px solid #f3f3f3;
+  border-radius: 10px;
+  padding: 0 15px;
+
+  input {
+    border: 0;
+    padding: 13px;
+    font-size: 16px;
+    width: 200px;
+  }
+
+}
+
+.overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+
+.drawer {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  height: 100%;
+  right:0;
+  width: 420px;
+  background-color: #FFFFFF;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1)
+  // padding: 30px;
+  // display: flex;
+  // flex-direction: column;
+
+// .items {
+//   flex: 1;
+//   overflow: auto; 
+//   margin-bottom: 40px;
+// }
+
+
+  h2 {
+    margin: 0;
+    }
+}
+
+.cartTotalBlock {
+  
+ul {
+  display: block;
+  margin-bottom: 20px !important;
+
+    li {
+        display: flex;
+        align-items: flex-end;
+        margin-bottom: 20px;
+    
+    
+        div {
+          flex: 1;
+          height: 1px;
+          border-bottom: 1px dashed #dfdfdf;
+          position: relative;
+          top: -4px;
+          margin: 0 7px;
+        }
+       }
+    }
+
+
+  .greenButton{
+    position: relative;
+    
+&:hover {
+  img {
+transform: translateX(5px)
+  }
+}
+
+    img {
+      position: absolute;
+      right: 30px;
+      top: 20px;
+      transition: 0.15s ease-in-out;
+    }
+  }  
+}
+
+.greenButton {
+          width: 100%;
+          height: 55px;
+          background: #9dd558;
+          border-radius: 18px;
+          border: 0;
+          color: #fff;
+          font-size: 16px;
+          font-weight: 500;
+          cursor: pointer;
+          transition: background 0.2s ease-in-out;
+      
+            &:hover {
+            background: lighten(#9dd558, 5%)
+          }
+      
+          &:active {
+            background: darken(#9dd558, 5%)
+          }
+        }
+
+.cartItem {
+  border: 1px solid #F3F3F3;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 20px;
+
+
+  .cartItemImg {
+    height: 70px;
+    width: 70px;
+    background-size: contain;
+    background-position: 0 0px;
+    background-repeat: no-repeat;
+    margin-right: 20px;
+    flex:1;
+
+
+  }
+
+  p{
+    font-size: 16px;
+    margin: 0;
+  }
+  b{
+font-size: 14px;
+  }
+  
+.removeBtn {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: opacity 0.2s ease-in-out;
+
+  &:hover {
+    opacity: 1;
+  }
+}
 }
