--- a/src/index.scss
+++ b/src/index.scss
@@ -38,51 +38,17 @@ header {
   }
 }
 
-.card {
-  border: 1px solid #F8F8F8;
-  padding: 30px;
-  width: 220px;
-  border-radius: 40px;
-  margin-right: 30px;
-  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
- 
 
-  &:hover {
-      box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
-      transform: translateY(-5px);
-  }
-  
-  .favorite {
-    position: absolute;
-    cursor: pointer;
-  }
 
-  span {
-    font-size: 13px;
-    opacity: 0.5;
-    text-transform: uppercase;
-
-  }
-
-  b {
-    font-size: 14px;
-  }
-
-  h5 {
-    font-weight: 400;
-    font-size: 14px;
-  }
-}
-
-.button {
-  background: #ffffff;
-  border: 1px solid #f2f2f2;
-  box-sizing: border-box;
-  border-radius: 8px;
-  height: 32px;
-  width: 32px;
-  cursor: pointer;
-}
+// .button {
+//   background: #ffffff;
+//   border: 1px solid #f2f2f2;
+//   box-sizing: border-box;
+//   border-radius: 8px;
+//   height: 32px;
+//   width: 32px;
+//   cursor: pointer;
+// }
 
 .search-block {
   border: 1px solid #f3f3f3;
