--- a/src/index.scss
+++ b/src/index.scss
@@ -70,7 +70,7 @@ header {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
 
@@ -83,16 +83,16 @@ header {
   right:0;
   width: 420px;
   background-color: #FFFFFF;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1)
-  // padding: 30px;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  padding: 30px;
   // display: flex;
   // flex-direction: column;
 
-// .items {
-//   flex: 1;
-//   overflow: auto; 
-//   margin-bottom: 40px;
-// }
+.items {
+  flex: 1;
+  overflow: auto; 
+  margin-bottom: 40px;
+}
 
 
   h2 {
