--- a/src/index.scss
+++ b/src/index.scss
@@ -174,6 +174,34 @@ transform: translateX(5px)
           }
         }
 
+.cartEmpty {
+  text-align: center;
+
+  p {
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+
+    &:hover {
+      img {
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
+
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
+
 .cartItem {
   border: 1px solid #F3F3F3;
   border-radius: 20px;
@@ -189,7 +217,6 @@ transform: translateX(5px)
     background-repeat: no-repeat;
     margin-right: 20px;
     flex:1;
-
 
   }
 
