--- a/src/index.scss
+++ b/src/index.scss
@@ -38,7 +38,33 @@ header {
   }
 }
 
+.cartEmpty {
+  text-align: center;
 
+  p {
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+
+    &:hover {
+      img {
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
+
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
 
 // .button {
 //   background: #ffffff;
