--- a/src/components/Card/Сard.module.scss
+++ b/src/components/Card/Сard.module.scss
@@ -1,5 +1,5 @@
 .card {
-  border: 1px solid #F8F8F8;
+  border: 1px solid #f3f3f3;
   padding: 30px;
   width: 220px;
   border-radius: 40px;
@@ -7,33 +7,32 @@
   margin-bottom: 30px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
-.plus {
-  cursor: pointer;
-}
+  .plus {
+      cursor: pointer;
+    }
+  
+    &:hover {
+      box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
+      transform: translateY(-5px);
+    }
+  
+    .favorite {
+      position: absolute;
+      cursor: pointer;
+    }
 
-
-  &:hover {
-    box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
-    transform: translateY(-5px);
-  }
-
-  .favorite {
-    position: absolute;
-    cursor: pointer;
-  }
-
-  span {
-    font-size: 13px;
-    opacity: 0.5;
-    text-transform: uppercase;
-  }
-
-  b {
-    font-size: 14px;
-  }
-
-  h5 {
-    font-weight: 400;
-    font-size: 14px;
-  }
-}
+    span {
+      font-size: 13px;
+      opacity: 0.5;
+      text-transform: uppercase;
+    }
+  
+    b {
+      font-size: 14px;
+    }
+  
+    h5 {
+      font-weight: 400;
+      font-size: 14px;
+    }
+    }
